--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1"
-  },
-  "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "html-webpack-plugin": "^2.22.0",
-    "webpack": "^1.13.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "webpack": "^1.13.1"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^1.14.1"
   }
 }
