--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "webpack": "^1.13.1"
   },
   "devDependencies": {
+    "babel-register": "^6.11.6",
+    "mocha": "^3.0.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
