--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-register": "^6.11.6",
+    "babel-register": "^6.14.0",
+    "eslint": "^3.6.0",
+    "eslint-plugin-react": "^6.3.0",
     "expect": "^1.20.2",
-    "mocha": "^3.0.1",
-    "webpack-dev-server": "^1.14.1"
+    "mocha": "^3.0.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
