--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "html-webpack-plugin": "^2.22.0",
     "material-ui": "^0.15.4",
+    "moment": "^2.15.1",
+    "moment-timezone": "^0.5.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
