--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.0.5",
+    "redux-form-material-ui": "^4.1.0",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.2"
