--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-register": "^6.14.0",
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
+    "redux-devtools-extension": "^1.0.0",
     "webpack-dev-server": "^1.16.1"
   }
 }
