--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-form": "^6.0.5",
     "redux-form-material-ui": "^4.1.0",
     "redux-logger": "^2.6.1",
+    "redux-persist": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.2"
   },
