--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "dotenv": "^2.0.0",
     "html-webpack-plugin": "^2.22.0",
     "material-ui": "^0.16.5",
     "moment": "^2.15.1",
