--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "production": "webpack -p",
-    "start": "webpack-dev-server",
+    "start:dev": "npm run clean && webpack-dev-server",
+    "start:production": "NODE_ENV=production node server.js",
     "test": "mocha --compilers js:babel-register --recursive",
-    "test:watch": "npm test -- --watch"
+    "test:watch": "npm test -- --watch",
+    "clean": "rimraf build",
+    "build": "npm run clean && NODE_ENV=production webpack -p"
   },
   "author": "",
   "license": "ISC",
@@ -39,6 +41,7 @@
     "mocha": "^3.0.2",
     "react-hot-loader": "^1.3.1",
     "redux-devtools-extension": "^1.0.0",
+    "rimraf": "^2.5.4",
     "webpack-dev-server": "^2.3.0"
   }
 }
