--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.28.0",
     "dotenv": "2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.22.0",
     "material-ui": "^0.17.0",
     "moment": "^2.15.1",
     "moment-timezone": "^0.5.5",
+    "node-sass": "^4.5.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
@@ -32,6 +35,8 @@
     "redux": "^3.6.0",
     "redux-persist": "^4.0.0",
     "redux-thunk": "^2.1.0",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
