--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "webpack-dev-server",
     "start:production": "NODE_ENV=production node server.js",
-    "test": "mocha --compilers js:babel-register --recursive",
+    "test": "babel-tape-runner test/cities/list/reducers.js",
     "test:watch": "npm test -- --watch",
     "clean": "rimraf build",
     "build": "npm run clean && NODE_ENV=production webpack -p"
@@ -15,11 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.28.0",
     "dotenv": "2.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -40,12 +35,17 @@
     "webpack": "^2.2.1"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
-    "expect": "^1.20.2",
-    "mocha": "^3.0.2",
+    "babel-tape-runner": "^2.0.1",
     "react-hot-loader": "^1.3.1",
     "redux-devtools-extension": "^2.13.0",
     "rimraf": "^2.5.4",
+    "tape": "^4.6.3",
     "webpack-dev-server": "^2.3.0"
   }
 }
