--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "babel-tape-runner": "^2.0.1",
+    "deep-freeze": "0.0.1",
     "react-hot-loader": "^1.3.1",
     "redux-devtools-extension": "^2.13.0",
     "rimraf": "^2.5.4",
