--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "webpack-dev-server",
     "start:production": "NODE_ENV=production node server.js",
-    "test": "babel-tape-runner test/cities/list/reducers.js",
+    "test": "babel-tape-runner test/cities/list/reducers.js | faucet",
     "test:watch": "npm test -- --watch",
     "clean": "rimraf build",
     "build": "npm run clean && NODE_ENV=production webpack -p"
@@ -43,6 +43,7 @@
     "babel-register": "^6.14.0",
     "babel-tape-runner": "^2.0.1",
     "deep-freeze": "0.0.1",
+    "faucet": "0.0.1",
     "react-hot-loader": "^1.3.1",
     "redux-devtools-extension": "^2.13.0",
     "rimraf": "^2.5.4",
